FIXES FONT ON MOBILE DAMNIT

--- a/css/mobile-responsive.css
+++ b/css/mobile-responsive.css
@@ -39,7 +39,7 @@
 @media screen and (max-width: 390px) {
 
   .partfour p {
-    font-size: 1.6em !important;
+    font-size: 1.5em !important;
   }
 
 }
